scripts/nullaway/annotator/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8.txt
../annotator/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/Generacion.java:66: error: [NullAway] initializer method does not guarantee @NonNull field poblacion (line 55) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Generacion() {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/Generacion.java:107: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return selector;
		^
    (see http://t.uber.com/nullaway )
../annotator/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/Poblacion.java:60: error: [NullAway] initializer method does not guarantee @NonNull field individuos (line 51) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Poblacion() {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/Poblacion.java:76: error: [NullAway] initializer method does not guarantee @NonNull field individuos (line 51) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	public Poblacion(int opcion) {
	       ^
    (see http://t.uber.com/nullaway )
../annotator/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/Generador.java:128: error: [NullAway] initializer method does not guarantee @NonNull field generacion (line 33) is initialized along all control-flow paths (remember to check for exceptions or early returns).
	@Initializer private void fase3() {
	                          ^
    (see http://t.uber.com/nullaway )
../annotator/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/Generador.java:129: error: [NullAway] read of @NonNull field nuevos before initialization
		mejor = nuevos[0];
		        ^
    (see http://t.uber.com/nullaway )
../annotator/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/Generador.java:147: error: [NullAway] dereferenced expression gnaCruce is @Nullable
			if (gnaCruce.nextDouble() < Generacion.getProbabilidadCruce()) {
			            ^
    (see http://t.uber.com/nullaway )
../annotator/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/Generador.java:151: error: [NullAway] dereferenced expression gnaMutacion is @Nullable
				if (gnaMutacion.nextDouble() < Generacion
				               ^
    (see http://t.uber.com/nullaway )
../annotator/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/Generador.java:162: error: [NullAway] dereferenced expression Generacion.getSelectorPostCruce() is @Nullable
						.seleccionPostCruce(padres, hijos);
						^
    (see http://t.uber.com/nullaway )
../annotator/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/Individuo.java:48: error: [NullAway] @NonNull static field tipoIndividuo not initialized
	private static Individuo tipoIndividuo;
	                         ^
    (see http://t.uber.com/nullaway )
../annotator/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/Ejecucion.java:34: error: [NullAway] @NonNull field generaciones not initialized
	private Generacion[] generaciones;
	                     ^
    (see http://t.uber.com/nullaway )
../annotator/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/Proceso.java:36: error: [NullAway] @NonNull field ejecuciones not initialized
	private Ejecucion[] ejecuciones;
	                    ^
    (see http://t.uber.com/nullaway )
../annotator/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/impl/IndividuoCombinatorio.java:59: error: [NullAway] @NonNull field cromosoma not initialized
	private int[] cromosoma;
	              ^
    (see http://t.uber.com/nullaway )
../annotator/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/impl/SelectorEstocastico.java:103: error: [NullAway] dereferenced expression poolDeSeleccionados is @Nullable
			seleccionados[j] = poolDeSeleccionados[i];
			                                      ^
    (see http://t.uber.com/nullaway )
../annotator/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/impl/SelectorTodos.java:60: error: [NullAway] dereferenced expression poolDeSeleccionados is @Nullable
			seleccionados[j] = poolDeSeleccionados[i];
			                                      ^
    (see http://t.uber.com/nullaway )
../annotator/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/impl/IndividuoBinario.java:121: error: [NullAway] dereferenced expression cromosoma is @Nullable
		if (cromosoma[i]) {
		             ^
    (see http://t.uber.com/nullaway )
../annotator/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/impl/SelectorTorneo.java:110: error: [NullAway] dereferenced expression poolDeSeleccionados is @Nullable
			seleccionados[j] = poolDeSeleccionados[i];
			                                      ^
    (see http://t.uber.com/nullaway )
../annotator/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/Configuracion.java:58: error: [NullAway] @NonNull field proceso not initialized
	private Proceso proceso;
	                ^
    (see http://t.uber.com/nullaway )
Note: ../annotator/url8556430df5_saulguillermo_agapi_tgz-pJ8-agapi_impl_ejemplos_IndividuoCombinatorioEjemploJ8/src/agapi/Individuo.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
18 errors
